# barcode_reader

./: barcode_reader.py  pyproject.toml  shell.sh
